2015-02-11  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts):
	Fix default font size generation.

2015-02-11  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_start_ns):
	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts),
	(gst_ttmlrender_get_property), (gst_ttmlrender_set_property),
	(gst_ttmlrender_dispose), (gst_ttmlrender_class_init),
	(gst_ttmlrender_init):
	* src/gstttmlrender.h:
	* src/gstttmlspan.c: (gst_ttml_span_compose):
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	* src/gstttmlstyle.h:
	Different approach to default font size that simplifies upcoming
	region timeline implementation.
	As a bonus, we offer a default-font-size property now.

2015-02-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_parse_event):
	* src/gstttmlevent.c: (gst_ttml_event_list_flush):
	* src/gstttmlevent.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute):
	Expand REGION attributes at buffer-generation time, instead of parsing
	time. This simplifies the upcoming region timeline implementation.
	Additionally, it fixes a couple of tests which where wrong but noone
	ever noticed.

2015-02-05  Xavi Artigas  <xartigas@fluendo.com>


	* testsuite/ThisIsCoffee1961_captions.xml:
	Fix once and for all the mistake in the This Is Coffe xml file.

2015-02-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlevent.c: (gst_ttml_event_list_insert):
	A bit more of debug output.

2015-02-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
	Fix GCC Warning (which is Error on VS).

2015-01-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c:
	Fix textAlign when wrapOption=noWrap.

2015-01-26  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.16 ===

2015-01-26  Julien Moutte <julien@fluendo.com>

	* src/gstttmldownloader.c: (gst_ttml_downloader_done_cb),